Fix: remove nofollow, improve prose spacing, align editor and article rendering

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,82 @@
 @tailwind components;
 @tailwind utilities;
 
+.journal-prose {
+  --tw-prose-body: rgb(71 85 105);
+  --tw-prose-headings: rgb(15 23 42);
+  --tw-prose-links: rgb(180 83 9);
+  --tw-prose-bold: rgb(15 23 42);
+  --tw-prose-bullets: rgb(148 163 184);
+  --tw-prose-quotes: rgb(51 65 85);
+  --tw-prose-quote-borders: rgb(226 232 240);
+  --tw-prose-captions: rgb(100 116 139);
+}
+
+.journal-prose :where(p):not(:where([class~="not-prose"] *)) {
+  margin-top: 1.05em;
+  margin-bottom: 1.05em;
+  line-height: 1.9;
+}
+
+.journal-prose :where(h2):not(:where([class~="not-prose"] *)) {
+  margin-top: 2em;
+  margin-bottom: 0.75em;
+  line-height: 1.2;
+}
+
+.journal-prose :where(h3):not(:where([class~="not-prose"] *)) {
+  margin-top: 1.6em;
+  margin-bottom: 0.6em;
+  line-height: 1.3;
+}
+
+.journal-prose :where(h4):not(:where([class~="not-prose"] *)) {
+  margin-top: 1.3em;
+  margin-bottom: 0.5em;
+  line-height: 1.35;
+}
+
+.journal-prose :where(ul, ol):not(:where([class~="not-prose"] *)) {
+  margin-top: 1em;
+  margin-bottom: 1em;
+  padding-left: 1.25em;
+}
+
+.journal-prose :where(li):not(:where([class~="not-prose"] *)) {
+  margin-top: 0.3em;
+  margin-bottom: 0.3em;
+}
+
+.journal-prose :where(li > p):not(:where([class~="not-prose"] *)) {
+  margin-top: 0.45em;
+  margin-bottom: 0.45em;
+}
+
+.journal-prose :where(blockquote):not(:where([class~="not-prose"] *)) {
+  margin-top: 1.4em;
+  margin-bottom: 1.4em;
+  padding-left: 1em;
+  font-style: normal;
+}
+
+.journal-prose :where(img, figure, video):not(:where([class~="not-prose"] *)) {
+  margin-top: 1.5em;
+  margin-bottom: 1.5em;
+}
+
+.journal-prose :where(figcaption):not(:where([class~="not-prose"] *)) {
+  margin-top: 0.65em;
+  line-height: 1.6;
+}
+
+.journal-prose > :first-child {
+  margin-top: 0 !important;
+}
+
+.journal-prose > :last-child {
+  margin-bottom: 0 !important;
+}
+
 body {
   margin: 0;
   font-family: Arial, sans-serif;
